; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/aoa/core/extr_core.c_aoa_codec_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/aoa/core/extr_core.c_aoa_codec_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aoa_codec = type { i32 }

@fabric = common dso_local global i64 0, align 8
@codec_list = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aoa_codec_register(%struct.aoa_codec* %0) #0 {
  %2 = alloca %struct.aoa_codec*, align 8
  %3 = alloca i32, align 4
  store %struct.aoa_codec* %0, %struct.aoa_codec** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i64, i64* @fabric, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.aoa_codec*, %struct.aoa_codec** %2, align 8
  %8 = call i32 @attach_codec_to_fabric(%struct.aoa_codec* %7)
  store i32 %8, i32* %3, align 4
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i32, i32* %3, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %9
  %13 = load %struct.aoa_codec*, %struct.aoa_codec** %2, align 8
  %14 = getelementptr inbounds %struct.aoa_codec, %struct.aoa_codec* %13, i32 0, i32 0
  %15 = call i32 @list_add(i32* %14, i32* @codec_list)
  br label %16

16:                                               ; preds = %12, %9
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @attach_codec_to_fabric(%struct.aoa_codec*) #1

declare dso_local i32 @list_add(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
